Bug 429097 - Dolphin selects no folder when I go back/up while navigating through the file system
Summary: Dolphin selects no folder when I go back/up while navigating through the file...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.11.80
Platform: Arch Linux Linux
: VHI normal
Target Milestone: ---
Assignee: Felix Ernst
URL:
Keywords: regression
: 429507 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-11-14 14:29 UTC by Patrick Silva
Modified: 2020-11-23 12:50 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.11.90
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-11-14 14:29:03 UTC
STEPS TO REPRODUCE
1. open Dolphin
2. open any folder
3. go back by pressing alt+left or go up by pressing alt+up

OBSERVED RESULT
folder opened in the step 2 is not selected

EXPECTED RESULT
folder opened in the step 2 should be selected

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.20.3
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.1
Comment 1 Magnus Boman 2020-11-14 18:04:38 UTC
I'm seeing this as well, tried bisecting but due to several commits failing compile this is all I got:

```
There are only 'skip'ped commits left to test.
The first bad commit could be any of:
6151a7aec0516570926cb1d15da48936e38e6765
37327c9b0aae112c5890703cba1f0157043007e0
b6fc58c3c32b03f504a5f697b62c4834dc3f650a
a418d6229e31dac254660da2a417b4306f066ae3
We cannot bisect more!
```
Comment 2 Nate Graham 2020-11-16 18:14:11 UTC
Ironically this regression perfectly implements what is being requested in Bug 424723.

You can't please everyone. :(
Comment 3 Magnus Boman 2020-11-16 18:49:55 UTC
(In reply to Nate Graham from comment #2)
> Ironically this regression perfectly implements what is being requested in
> Bug 424723.
> 
> You can't please everyone. :(

That's how it goes, and that's why KDE has so many options :D

For now I'm just sticking to an old commit as Dolphin becomes incredibly frustrating to use otherwise.
Comment 4 Nate Graham 2020-11-16 18:56:36 UTC
Bisected to ad5d3367c7fef4c3c11188a768f21a2ee2b3c025 (move URL navigators into toolbar)

Felix, could you take a look?
Comment 5 Magnus Boman 2020-11-16 19:05:20 UTC
(In reply to Nate Graham from comment #4)
> Bisected to ad5d3367c7fef4c3c11188a768f21a2ee2b3c025 (move URL navigators
> into toolbar)
> 
> Felix, could you take a look?

That can't be right, I'm running 00abc6d28031569de17e4888d8b21e6afbe0872f (the commit after) and it selects the folder just fine.
Comment 6 Bug Janitor Service 2020-11-20 15:21:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/120
Comment 7 Bug Janitor Service 2020-11-20 15:21:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/120
Comment 8 Magnus Boman 2020-11-20 16:44:06 UTC
Tested the above MR and it works just as expected again!
Comment 9 Elvis Angelaccio 2020-11-21 18:25:15 UTC
Git commit 760700819cfdcb767efe0af5a26b385f41c38aae by Elvis Angelaccio, on behalf of Felix Ernst.
Committed on 21/11/2020 at 18:24.
Pushed by elvisangelaccio into branch 'release/20.12'.

Select last visited folder when going up/back

This commit fixes a regression introduced by
ad5d3367c7fef4c3c11188a768f21a2ee2b3c025. A lot of connections were
changed there and at least one of them was wrong. The connections can
be separated into GUI connections and internal ones. This commit makes
it so the GUI stuff is connected to m_urlNavigatorConnected and
everything else to m_urlNavigator.

M  +15   -17   src/dolphinviewcontainer.cpp

https://invent.kde.org/system/dolphin/commit/760700819cfdcb767efe0af5a26b385f41c38aae
Comment 10 Felix Ernst 2020-11-23 12:50:55 UTC
*** Bug 429507 has been marked as a duplicate of this bug. ***