Select last visited folder when going up/back

This commit fixes a regression introduced by
ad5d3367c7fef4c3c11188a768f21a2ee2b3c025. A lot of connections were
changed there and at least one of them was wrong. The connections can
be separated into GUI connections and internal ones. This commit makes
it so the GUI stuff is connected to m_urlNavigatorConnected and
everything else to m_urlNavigator.

BUG: 429097